Fixed video gap and header top

--- a/style/main.css
+++ b/style/main.css
@@ -45,7 +45,7 @@ h3 {
 /*    ----- Home Page -----    */
 
 #home-header {
-    margin-top: -2.8em;
+    margin-top: -4.5em;
     height: 90vh;
     min-height: 30em;
     background-color: #1B1930;
@@ -158,6 +158,12 @@ h3 {
     height:100%;
     width:100%;
     position:absolute;
+}
+
+.video-spacer {
+    display: block;
+    width: 100%;
+    height: 1rem;
 }
 
 
